@@ -10,7 +10,6 @@ DESIGN
 - Solutions: difficult to align scales and inefficient use of vertical space with pH value display
 
 HIGHEST
-- pH value changes when draining at low volume (ph-scale-basics#19)
 - derive solution color from concentration instead of pH (ph-scale-basics#34)
 
 HIGH
